--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "smooch-core": "^2.0.0"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-nodemon": "^2.0.6",
     "babel-eslint": "^5.0.0",
-    "esformatter": "^0.9.1",
+    "esformatter": "^0.10.0",
     "esformatter-braces": "^1.2.1",
     "esformatter-dot-notation": "^1.3.1",
     "esformatter-quotes": "^1.0.3",
-    "eslint": "^2.2.0"
+    "eslint": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.0.6"
   }
 }
